# Facedetect

./: README.md
cpp/: .object_detector_flip.cpp.swp  .train_object_detector.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  object_detector_flip.cpp  train_object_detector.cpp
cpp/dlib_build/: Makefile  cmake_install.cmake
cpp/dlib_build/cuda_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp/dlib_build/cudnn_test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
